test_data/Xml/Unexpected/Unserializable/InvalidClassName/embeddedDataSpecification/wrong.xml.exception
Expected an element representing an instance of class EmbeddedDataSpecification with element name embeddedDataSpecification, but got: utterlyInvalid at: the beginning